fix: Overflow display for 'content' image

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@ hr {
 
 .content {
 	max-height: 350px;
-	overflow: auto;
+	overflow: hidden;
+	align-content: center;
 	margin-bottom: 3%;
 }
 
